--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 * {
   padding: 0px;
   margin: 0px;
+  box-sizing: border-box;
   font-family: "Poppins";
   font-style: normal;
   font-size: 15px;
