--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 }
 
 body {
-  background-image: url("../lp-dxc-technology/img/bg-banner-full-tech.4jpg.jpg");
+  background-image: url("./img/bg-banner-full-tech.4jpg.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
