--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
 * {
   padding: 0px;
@@ -21,7 +21,7 @@ body {
   background-color: #000000bb;
   width: 365px;
   height: auto;
-  padding: 50px;
+  padding: 40px;
   border-radius: 20px;
 }
 
@@ -67,6 +67,6 @@ p {
 }
 
 .py-5 {
-  padding-top: 3rem!important;
-  padding-bottom: 0rem!important;
+  padding-top: 3rem !important;
+  padding-bottom: 0rem !important;
 }
