Aplicação de bordas no input "Last name"

--- a/style.css
+++ b/style.css
@@ -33,6 +33,10 @@ span#basic-addon1 {
   border-radius: 20px 0px 0px 20px;
 }
 
+span#basic-addon2 {
+  border-radius: 20px 0px 0px 20px;
+}
+
 button.btn.btn-outline-info {
   width: 150px;
   border-radius: 20px;
